
1.20 (not yet released)
    *   (ms) Using semctl to reset the value of the semaphore in the 
             Synchronized appender to prevent "Numerical result out of 
             range" problem caused by an unbalanced SEM_UNDO when
             incrementing it. Reported by John Little.
    *   (ms) Added parameters in curly braces to cspecs in PatternLayout.
 
1.19 (2008/10/22)
    *   (ms) Applied patch by Peter Rabbitson, which fixes the caller() 
             level when calling get_logger() on a subclass of Log4perl.
    *   (ms) Added documentation on is_xxx() methods and clarified that
             it doesn't necessarily mean that a message gets logged if
             they're returning true (requested by Conway Allen via 
             [rt.cpan.org #39085].
    *   (ms) Applied patch by Lee Johnson to appender_by_name() to allow
             for undefined appender names without issuing a warning,
             which was occurring with Catalyst::Log4perl.
    *   (ms) Added docs on numerical levels and level strings in 
             Log::Log4perl::Level.
    *   (ms) Applied patch by Anthony Foiani for support of literal 
             text in DateFormat format strings.

1.18 (2008/08/23)
    *   (ms) Added explanation that categories and loggers are the same
             thing (thanks to Rabbit).
    *   (ms) Fixed t/053Resurrect to work with 5.005_03
    *   (ms) Added preinit_callback function for init_and_watch()
    *   (ms) Applied patch by Andy Grundman which speeds up is_LEVEL()
             calls by skipping unnecessary string concatenations 
             (http://rt.cpan.org/Ticket/Display.html?id=38537).
    *   (ms) Applied patch by Jae Gangemi addding a no_warning option to the
             socket appender
             (http://rt.cpan.org/Ticket/Display.html?id=34399).

1.17 (2008/07/19)
    *   (ms) Fixed test suite to run on Strawberry Perl on Win32.
    *   (ms) Added 'l4p' as a valid prefix in configuration files (equal